@startuml

entity ENVIRONMENT {
<<from result_shared>>
* id: SERIAL
}

entity ORT_ISSUE {
<<from result_shared>>
* id: SERIAL
}

entity DEFECT {
* id: SERIAL
--
* fkAdvisorResult: INT
* externalID: VARCHAR(256)
* url: VARCHAR(256)
title: VARCHAR(256)
state: VARCHAR(128)
severity: VARCHAR(64)
description: TEXT
creationTime: TIMESTAMP
modificationTime: TIMESTAMP
closingTime: TIMESTAMP
fixReleaseVersion: VARCHAR(128)
fixReleaseUrl: VARCHAR(256)
}

entity VULNERABILITY {
* id: SERIAL
--
* fkAdvisorResult: INT
* externalID: VARCHAR(256)
summary: VARCHAR(256)
description: TEXT
}

entity VULNERABILITY_REFERENCE {
id: SERIAL
--
* fkVulnerability: INT
* url: VARCHAR(256)
scoringSystem: VARCHAR(64)
severity: VARCHAR(64)
}

entity ADVISOR_RESULT_ISSUE {
* id: SERIAL
--
* fkAdvisorResult: INT
* fkIssue: INT
}

entity ADVISOR_RESULT {
* id: SERIAL
--
* fkPackageResult: INT
* advisorName: VARCHAR(128)
* startTime: TIMESTAMP
* endTime: TIMESTAMP
}

entity ADVISOR_PACKAGE_RESULT {
* id: SERIAL
--
* fkResult: INT
* fkAdvisorRun: INT
* pkgType: VARCHAR(32)
pkgNamespace: VARCHAR(256)
pkgName: VARCHAR(256)
pkgVersion: VARCHAR(64)
}

entity ADVISOR_RUN {
* id: SERIAL
--
* startTime: TIMESTAMP
* endTime: TIMESTAMP
* fkEnvironment: INT
* config: JSONB
* fkRun: INT
}

VULNERABILITY_REFERENCE::fkVulnerability -- VULNERABILITY::id

ADVISOR_RESULT_ISSUE::fkIssue -- ORT_ISSUE::id
ADVISOR_RESULT_ISSUE::fkAdvisorResult -- ADVISOR_RESULT::id

ADVISOR_RESULT::id -- DEFECT::fkAdvisorResult
ADVISOR_RESULT::id -- VULNERABILITY::fkAdvisorResult
ADVISOR_RESULT::fkPackageResult -- ADVISOR_PACKAGE_RESULT::id

ADVISOR_PACKAGE_RESULT::fkResult -- ADVISOR_RESULT::id
ADVISOR_PACKAGE_RESULT::fkAdvisorRun -- ADVISOR_RUN::id

ADVISOR_RUN::fkEnvironment -- ENVIRONMENT::id

@enduml
